--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zuerich-meets-tanzania-website",
-  "version": "2.0.0",
+  "name": "zurich-meets-tanzania-website",
+  "version": "2.2.0",
   "description": "This is the website for the non profit organization \"zuerich - meets - tanzania\".",
   "type": "module",
   "main": "index.js",
@@ -8,7 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "npx nodemon index.js",
-    "format": "npx prettier --write \"**/*.{ejs,js,css}\" \"!**/*.min.{js,css}\" \"!node_modules/**\""
+    "format": "npx prettier --write \"**/*.{ejs,js,css}\" \"!**/*.min.{js,css}\" \"!node_modules/**\"",
+    "docker:build": "docker build . -t zurich-meets-tanzania-website",
+    "docker:run": "docker run --rm --name zurich-meets-tanzania-website -p 8080:8080 --env-file ./docker.env zurich-meets-tanzania-website",
+    "docker:stop": "docker stop zurich-meets-tanzania-website",
+    "docker:tag": "docker tag zurich-meets-tanzania-website timond3v/zurich-meets-tanzania-website",
+    "docker:push": "docker push timond3v/zurich-meets-tanzania-website"
   },
   "keywords": [],
   "author": "Timon Fiedler",
