--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
     "useTabs": false,
     "singleQuote": false,
     "printWidth": 400,
-    "quoteProps": "consistent",
-    "plugins": ["prettier-plugin-ejs"]
+    "quoteProps": "consistent"
 }
