--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zurich-meets-tanzania-website",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "This is the website for the non profit organization \"zuerich - meets - tanzania\".",
   "homepage": "https://www.zurich-meets-tanzania.com",
   "author": "Timon Fiedler",
@@ -34,8 +34,11 @@
     "@angular/platform-server": "^20.0.2",
     "@angular/router": "^20.0.2",
     "@angular/ssr": "^20.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "mysql2": "^3.14.1",
     "rxjs": "~7.8.0",
     "timonjs": "^2.1.0",
     "tslib": "^2.3.0",
@@ -47,6 +50,7 @@
     "@angular/compiler-cli": "^20.0.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^24.0.1",
     "jasmine-core": "^5.8.0",
