Changed the blog builder to fix issue #62 Added a sql script that combines all the ones before that Updated git and dockerignore Added a zoomed out file for the blog author "Das ZMT-Team"

--- a/.dockerignore
+++ b/.dockerignore
@@ -23,3 +23,7 @@ Text formatieren ZMT.docx
 LICENSE
 README.md
 HTML Einführung.docx
+_files/
+Redesign Blogstorage.txt
+pureHtmlToBlogJson.js
+todo.txt
