--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ Redesign spenden.txt
 *.env
 _ZMT Marketing/
 Buissness Information.txt
+_files/
+Redesign Blogstorage.txt
+pureHtmlToBlogJson.js
+todo.txt
