--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zurich-meets-tanzania-website",
-  "version": "3.7.4",
+  "version": "3.8.0",
   "description": "This is the website for the non profit organization \"zurich - meets - tanzania\".",
   "homepage": "https://www.zurich-meets-tanzania.com",
   "author": "Timon Fiedler",
@@ -24,16 +24,16 @@
     "prettier": "npx prettier"
   },
   "dependencies": {
-    "@angular/animations": "^20.2.2",
-    "@angular/common": "^20.2.2",
-    "@angular/compiler": "^20.2.2",
-    "@angular/core": "^20.2.2",
-    "@angular/forms": "^20.2.2",
-    "@angular/platform-browser": "^20.2.2",
-    "@angular/platform-browser-dynamic": "^20.2.2",
-    "@angular/platform-server": "^20.2.2",
-    "@angular/router": "^20.2.2",
-    "@angular/ssr": "^20.2.2",
+    "@angular/animations": "^21.0.2",
+    "@angular/common": "^21.0.2",
+    "@angular/compiler": "^21.0.2",
+    "@angular/core": "^21.0.2",
+    "@angular/forms": "^21.0.2",
+    "@angular/platform-browser": "^21.0.2",
+    "@angular/platform-browser-dynamic": "^21.0.2",
+    "@angular/platform-server": "^21.0.2",
+    "@angular/router": "^21.0.2",
+    "@angular/ssr": "^21.0.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -47,9 +47,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.2.2",
-    "@angular/cli": "^20.2.2",
-    "@angular/compiler-cli": "^20.2.2",
+    "@angular-devkit/build-angular": "^21.0.2",
+    "@angular/cli": "^21.0.2",
+    "@angular/compiler-cli": "^21.0.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
@@ -61,6 +61,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.7.4",
     "typescript": "^5.8.3"
   },
   "keywords": [
