--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zurich-meets-tanzania-website",
-  "version": "3.8.0",
+  "version": "3.9.0",
   "description": "This is the website for the non profit organization \"zurich - meets - tanzania\".",
   "homepage": "https://www.zurich-meets-tanzania.com",
   "author": "Timon Fiedler",
@@ -36,9 +36,11 @@
     "@angular/ssr": "^21.0.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "delivapi-client": "^1.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "node-mailjet": "^6.0.9",
     "rxjs": "~7.8.0",
@@ -54,6 +56,7 @@
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/jasmine": "~5.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.1",
     "jasmine-core": "^5.8.0",
     "karma": "~6.4.0",
