Added the cookie banner Added analytics (google and tianji) Added the privacy page Changed some variable names to match the new database rework Added an api endpoint that distributes environment variables (only ones that can be shared) Removed some hardcoded values that belong in the env file but needed to be used in the frontend Formatted all files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zurich-meets-tanzania-website",
-  "version": "3.9.3",
+  "version": "3.10.0",
   "description": "This is the website for the non profit organization \"zurich - meets - tanzania\".",
   "homepage": "https://www.zurich-meets-tanzania.com",
   "author": "Timon Fiedler",
@@ -21,6 +21,7 @@
     "test": "ng test --verbose",
     "serve:ssr:zurich-meets-tanzania-angular": "node dist/server/server.mjs",
     "format": "npx prettier --write \"src/**/*.{ts,html,scss}\"",
+    "fmt": "npm run format",
     "prettier": "npx prettier"
   },
   "dependencies": {
